# smart-terminal

./: development_guide.md  main.py  pyproject.toml
api/: connector.py
ui/: main_window.py
ui/widgets/: candlestick_chart_widget.py
